Fix header spacing.

--- a/app/static/home.css
+++ b/app/static/home.css
@@ -100,7 +100,6 @@ p.intro {
 
 p {
     text-align:center;
-    margin-top: 20px; /* Add some space above the text */
 }
 
 footer p {
